--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -215,3 +215,69 @@ input[type=submit] {
   background: #4aaaa5;
   border: 0 none;
 }
+
+/* MEDIA QUERY */
+
+@media screen and (max-width:980px) {
+  #logo {
+    margin-left: 30px;
+  }
+
+  nav {
+  margin-right: 40px;
+}
+
+section.main-section {
+  width: 60%;
+  margin-left: 50px;
+}
+
+.work { 
+  width: 46%;
+}
+}
+
+@media screen and (max-width:768px) {
+section.main-section {
+  width: auto;
+  margin: 10px;
+ }
+
+ /* #contact-form {
+   min-width: 100%;
+ } */
+}
+
+@media screen and (max-width:640px) {
+  #masthead {
+  position: static;
+  top: 0;
+}
+
+a#logo, nav {
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+} 
+
+#main-container {
+  padding: 5px;
+}
+
+img.auth-image {
+  width: 100%;
+}
+section.main-section {
+  width: 95%;
+}
+
+.work {
+  width: 100%;
+}
+
+.form#contact-form {
+   width: 100%
+  /* margin-left: 20px; */
+}
+
+}
